--- a/qof/po/sv.po
+++ b/qof/po/sv.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: qof 0.7.2\n"
 "Report-Msgid-Bugs-To: qof-devel@lists.sourceforge.net\n"
-"POT-Creation-Date: 2007-07-30 20:19+0100\n"
+"POT-Creation-Date: 2007-11-15 19:46+0000\n"
 "PO-Revision-Date: 2006-09-28 17:54+0100\n"
 "Last-Translator: Daniel Nylander <po@danielnylander.se>\n"
 "Language-Team: Swedish <tp-sv@listor.tp-sv.se>\n"
@@ -15,147 +15,22 @@ msgstr ""
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
-#: ../backend/file/qsf-backend.c:118
-msgid "Level of compression to use: 0 for none, 9 for highest."
-msgstr "Komprimeringsnivå att använda: 0 för ingen, 9 för högsta."
-
-#: ../backend/file/qsf-backend.c:120
-msgid ""
-"QOF can compress QSF XML files using gzip. Note that compression is not used "
-"when outputting to STDOUT."
-msgstr ""
-"QOF kan komprimera QSF XML-filer med gzip. Notera att komprimering inte "
-"används när data skickas till standard ut."
-
-#: ../backend/file/qsf-backend.c:130
-msgid "List of QSF map files to use for this session."
-msgstr "Lista av QSF-kartfiler att använda för denna session."
-
-#: ../backend/file/qsf-backend.c:132
-msgid ""
-"QOF can convert objects within QSF XML files using a map of the changes "
-"required."
-msgstr ""
-"QOF kan konvertera objekt inom QSF XML-filer med en karta av de ändringar "
-"som krävs."
-
-#: ../backend/file/qsf-backend.c:141
-msgid "Encoding string to use when writing the XML file."
-msgstr "Teckenkodningssträng att använda när XML-fil skrivs."
-
-#: ../backend/file/qsf-backend.c:143
-msgid ""
-"QSF defaults to UTF-8. Other encodings are supported by passing the encoding "
-"string in this option."
-msgstr ""
-"Standard i QSF är UTF-8. Övriga teckenkodningar stöds genom att skicka med "
-"kodningssträngen i detta alternativ."
-
-#: ../backend/file/qsf-backend.c:152
-msgid "Convert deprecated date values to time values."
-msgstr "Konvertera föråldrade datumvärden till tidsvärden."
-
-#: ../backend/file/qsf-backend.c:154
-msgid ""
-"Applications that support the new QOF time format need to enable this option "
-"to convert older date values into time. Applications that still use date "
-"should not set this option until time values are supported."
-msgstr ""
-"Program som har stöd för det nya QOF-tidsformatet behöver aktivera det här "
-"alternativet för att konvertera äldre datumvärden till tid. Program som "
-"fortfarande använder datum bör inte ställa in det här alternativet förrän "
-"tidsvärden stöds."
-
-#: ../backend/file/qsf-backend.c:252
-#, c-format
-msgid ""
-"The selected QSF Object file '%s' requires a map but it was not provided."
-msgstr "Den valda QSF-objektfilen \"%s\" kräver en karta men den angavs inte."
-
-#: ../backend/file/qsf-backend.c:255
-#, c-format
-msgid ""
-"When converting XML strings into numbers, an overflow has been detected. The "
-"QSF object file '%s' contains invalid data in a field that is meant to hold "
-"a number."
-msgstr ""
-"Ett överflöde påträffades när XML-strängar konverterades till siffror. QSF-"
-"objektfilen \"%s\" innehåller ogiltigt data i ett fält som är tänkt att "
-"innehålla siffror."
-
-#: ../backend/file/qsf-backend.c:339
-#, c-format
-msgid ""
-"could not write to '%s'. That database may be on a read-only file system, or "
-"you may not have write permission for the directory.\n"
-msgstr ""
-"kunde inte skriva till \"%s\". Den databasen kan finnas på ett skrivskyddat "
-"filsystem, eller att du inte har skrivrättighet för katalogen.\n"
-
-#: ../backend/file/qsf-backend.c:497
-#, c-format
-msgid "There was an error parsing the file '%s'.\n"
-msgstr "Det inträffade ett fel vid tolkning av filen \"%s\".\n"
-
-#: ../backend/file/qsf-backend.c:532 ../backend/file/qsf-backend.c:575
-#: ../backend/file/qsf-xml-map.c:260 ../backend/file/qsf-xml-map.c:282
-#: ../backend/file/qsf-xml-map.c:341 ../backend/file/qsf-xml.c:266
-#: ../backend/file/qsf-xml.c:325
-#, c-format
-msgid "There was an error parsing the file '%s'."
-msgstr "Det inträffade ett fel vid tolkning av filen \"%s\"."
-
-#: ../backend/file/qsf-backend.c:583
-#, c-format
-msgid "There was an error reading the file '%s'."
-msgstr "Det inträffade ett fel vid läsning av filen \"%s\"."
-
-#: ../backend/file/qsf-backend.c:616
-#, c-format
-msgid ""
-"The selected file '%s' is a QSF map and cannot be opened as a QSF object."
-msgstr ""
-"Den valda filen \"%s\" är en QSF-karta och kan inte öppnas som ett QSF-"
-"objekt."
-
-#: ../backend/file/qsf-backend.c:1179
-#, c-format
-msgid ""
-"Could not write to '%s'. Check that you have permission to write to this "
-"file and that there is sufficient space to create it."
-msgstr ""
-"Kunde inte skriva till \"%s\". Kontrollera att du har skrivrättighet till "
-"den här filen och att det finns tillräckligt ledigt utrymme för att skapa "
-"den."
-
-#: ../backend/file/qsf-backend.c:1471
-#, c-format
-msgid ""
-"The selected QSF object file '%s' contains one or more invalid GUIDs. The "
-"file cannot be processed - please check the source of the file and try again."
-msgstr ""
-"Den valda QSF-objektfilen \"%s\" innehåller en eller flera ogiltiga GUID. "
-"Filen kan inte behandlas - kontrollera källan för filen och försök igen."
-
-#: ../backend/file/qsf-backend.c:1593
-#, c-format
-msgid ""
-"The selected QSF object file '%s' contains one or more invalid 'collect' "
-"values. The file cannot be processed - please check the source of the file "
-"and try again."
-msgstr ""
-"Den valda QSF-objektfilen \"%s\" innehåller en eller flera ogiltiga \"collect"
-"\"-värden. Filen kan inte behandlas - kontrollera källan för filen och "
-"försök igen."
-
-#: ../backend/file/qsf-xml-map.c:253 ../backend/file/qsf-xml-map.c:334
-#: ../backend/file/qsf-xml.c:255 ../backend/file/qsf-xml.c:311
+#: backend/file/qsf-xml-map.c:253 backend/file/qsf-xml-map.c:334
+#: backend/file/qsf-xml.c:255 backend/file/qsf-xml.c:311
 #, c-format
 msgid "The QSF XML file '%s' could not be found."
 msgstr "QSF XML-filen \"%s\" kunde inte hittas."
 
-#: ../backend/file/qsf-xml-map.c:266 ../backend/file/qsf-xml.c:272
-#: ../backend/file/qsf-xml.c:331
+#: backend/file/qsf-xml-map.c:260 backend/file/qsf-xml-map.c:282
+#: backend/file/qsf-xml-map.c:341 backend/file/qsf-xml.c:266
+#: backend/file/qsf-xml.c:325 backend/file/qsf-backend.c:532
+#: backend/file/qsf-backend.c:575
+#, c-format
+msgid "There was an error parsing the file '%s'."
+msgstr "Det inträffade ett fel vid tolkning av filen \"%s\"."
+
+#: backend/file/qsf-xml-map.c:266 backend/file/qsf-xml.c:272
+#: backend/file/qsf-xml.c:331
 #, c-format
 msgid ""
 "Invalid QSF Object file! The QSF object file '%s'  failed to validate  "
@@ -166,12 +41,12 @@ msgstr ""
 "objektschemat misslyckades. XML-strukturen för filen är antingen inte "
 "formaterad rätt eller att filen innehåller felaktigt data."
 
-#: ../backend/file/qsf-xml-map.c:275
+#: backend/file/qsf-xml-map.c:275
 #, c-format
 msgid "The QSF map file '%s' could not be found."
 msgstr "QSF-kartfilen \"%s\" kunde inte hittas."
 
-#: ../backend/file/qsf-xml-map.c:348
+#: backend/file/qsf-xml-map.c:348
 msgid ""
 "Invalid QSF Map file! The QSF map file failed to validate against the QSF "
 "map schema. The XML structure of the file is either not well-formed or the "
@@ -181,7 +56,7 @@ msgstr ""
 "misslyckades. XML-strukturen för filen är antingen inte formaterad rätt "
 "eller att filen innehåller felaktigt data."
 
-#: ../backend/file/qsf-xml-map.c:420
+#: backend/file/qsf-xml-map.c:420
 #, c-format
 msgid ""
 "The selected QSF map '%s' contains unusable or missing data. This is usually "
@@ -192,7 +67,7 @@ msgstr ""
 "här beror vanligtvis på att inte alla nödvändiga parametrar för de "
 "definierade objekten har beräkningar beskrivna i kartan."
 
-#: ../backend/file/qsf-xml-map.c:514
+#: backend/file/qsf-xml-map.c:514
 #, c-format
 msgid ""
 "The QSF Map file '%s' was written for a different version of QOF. It may "
@@ -201,7 +76,132 @@ msgstr ""
 "QSF-kartfilen \"%s\" skrevs för en annan version av QOF. Den kan behöva "
 "ändras för att fungera med din aktuella QOF-installation."
 
-#: ../backend/sqlite/qof-sqlite.c:653
+#: backend/file/qsf-backend.c:118
+msgid "Level of compression to use: 0 for none, 9 for highest."
+msgstr "Komprimeringsnivå att använda: 0 för ingen, 9 för högsta."
+
+#: backend/file/qsf-backend.c:120
+msgid ""
+"QOF can compress QSF XML files using gzip. Note that compression is not used "
+"when outputting to STDOUT."
+msgstr ""
+"QOF kan komprimera QSF XML-filer med gzip. Notera att komprimering inte "
+"används när data skickas till standard ut."
+
+#: backend/file/qsf-backend.c:130
+msgid "List of QSF map files to use for this session."
+msgstr "Lista av QSF-kartfiler att använda för denna session."
+
+#: backend/file/qsf-backend.c:132
+msgid ""
+"QOF can convert objects within QSF XML files using a map of the changes "
+"required."
+msgstr ""
+"QOF kan konvertera objekt inom QSF XML-filer med en karta av de ändringar "
+"som krävs."
+
+#: backend/file/qsf-backend.c:141
+msgid "Encoding string to use when writing the XML file."
+msgstr "Teckenkodningssträng att använda när XML-fil skrivs."
+
+#: backend/file/qsf-backend.c:143
+msgid ""
+"QSF defaults to UTF-8. Other encodings are supported by passing the encoding "
+"string in this option."
+msgstr ""
+"Standard i QSF är UTF-8. Övriga teckenkodningar stöds genom att skicka med "
+"kodningssträngen i detta alternativ."
+
+#: backend/file/qsf-backend.c:152
+msgid "Convert deprecated date values to time values."
+msgstr "Konvertera föråldrade datumvärden till tidsvärden."
+
+#: backend/file/qsf-backend.c:154
+msgid ""
+"Applications that support the new QOF time format need to enable this option "
+"to convert older date values into time. Applications that still use date "
+"should not set this option until time values are supported."
+msgstr ""
+"Program som har stöd för det nya QOF-tidsformatet behöver aktivera det här "
+"alternativet för att konvertera äldre datumvärden till tid. Program som "
+"fortfarande använder datum bör inte ställa in det här alternativet förrän "
+"tidsvärden stöds."
+
+#: backend/file/qsf-backend.c:252
+#, c-format
+msgid ""
+"The selected QSF Object file '%s' requires a map but it was not provided."
+msgstr "Den valda QSF-objektfilen \"%s\" kräver en karta men den angavs inte."
+
+#: backend/file/qsf-backend.c:255
+#, c-format
+msgid ""
+"When converting XML strings into numbers, an overflow has been detected. The "
+"QSF object file '%s' contains invalid data in a field that is meant to hold "
+"a number."
+msgstr ""
+"Ett överflöde påträffades när XML-strängar konverterades till siffror. QSF-"
+"objektfilen \"%s\" innehåller ogiltigt data i ett fält som är tänkt att "
+"innehålla siffror."
+
+#: backend/file/qsf-backend.c:339
+#, c-format
+msgid ""
+"could not write to '%s'. That database may be on a read-only file system, or "
+"you may not have write permission for the directory.\n"
+msgstr ""
+"kunde inte skriva till \"%s\". Den databasen kan finnas på ett skrivskyddat "
+"filsystem, eller att du inte har skrivrättighet för katalogen.\n"
+
+#: backend/file/qsf-backend.c:497
+#, c-format
+msgid "There was an error parsing the file '%s'.\n"
+msgstr "Det inträffade ett fel vid tolkning av filen \"%s\".\n"
+
+#: backend/file/qsf-backend.c:583
+#, c-format
+msgid "There was an error reading the file '%s'."
+msgstr "Det inträffade ett fel vid läsning av filen \"%s\"."
+
+#: backend/file/qsf-backend.c:616
+#, c-format
+msgid ""
+"The selected file '%s' is a QSF map and cannot be opened as a QSF object."
+msgstr ""
+"Den valda filen \"%s\" är en QSF-karta och kan inte öppnas som ett QSF-"
+"objekt."
+
+#: backend/file/qsf-backend.c:1179
+#, c-format
+msgid ""
+"Could not write to '%s'. Check that you have permission to write to this "
+"file and that there is sufficient space to create it."
+msgstr ""
+"Kunde inte skriva till \"%s\". Kontrollera att du har skrivrättighet till "
+"den här filen och att det finns tillräckligt ledigt utrymme för att skapa "
+"den."
+
+#: backend/file/qsf-backend.c:1471
+#, c-format
+msgid ""
+"The selected QSF object file '%s' contains one or more invalid GUIDs. The "
+"file cannot be processed - please check the source of the file and try again."
+msgstr ""
+"Den valda QSF-objektfilen \"%s\" innehåller en eller flera ogiltiga GUID. "
+"Filen kan inte behandlas - kontrollera källan för filen och försök igen."
+
+#: backend/file/qsf-backend.c:1593
+#, c-format
+msgid ""
+"The selected QSF object file '%s' contains one or more invalid 'collect' "
+"values. The file cannot be processed - please check the source of the file "
+"and try again."
+msgstr ""
+"Den valda QSF-objektfilen \"%s\" innehåller en eller flera ogiltiga \"collect"
+"\"-värden. Filen kan inte behandlas - kontrollera källan för filen och "
+"försök igen."
+
+#: backend/sqlite/qof-sqlite.c:1224
 #, c-format
 msgid ""
 "Unable to open the output file '%s' - do you have permission to create this "
@@ -210,36 +210,36 @@ msgstr ""
 "Kunde inte öppna utdatafilen \"%s\" - har du rättighet att skapa den här "
 "filen?"
 
-#: ../backend/sqlite/qof-sqlite.c:683
+#: backend/sqlite/qof-sqlite.c:1272
 #, c-format
 msgid "Unable to open the sqlite database '%s'."
 msgstr "Kunde inte öppna sqlite-databasen \"%s\"."
 
-#: ../backend/sqlite/qof-sqlite.c:706
+#: backend/sqlite/qof-sqlite.c:1296
 msgid "Please provide a filename for sqlite."
 msgstr "Ange ett filnamn för sqlite."
 
-#: ../backend/sqlite/qof-sqlite.c:819
+#: backend/sqlite/qof-sqlite.c:1433
 msgid "Unable to delete record."
 msgstr "Kunde inte ta bort post."
 
-#: ../backend/sqlite/qof-sqlite.c:820
+#: backend/sqlite/qof-sqlite.c:1435
 msgid "Unable to create record."
 msgstr "Kunde inte skapa post."
 
-#: ../backend/sqlite/qof-sqlite.c:821
+#: backend/sqlite/qof-sqlite.c:1437
 msgid "Unable to insert a new record."
 msgstr "Kunde inte infoga en ny post."
 
-#: ../backend/sqlite/qof-sqlite.c:822
+#: backend/sqlite/qof-sqlite.c:1439
 msgid "Unable to update existing record."
 msgstr "Kunde inte uppdatera existerande post."
 
-#: ../qof/qofsession.c:1073
+#: qof/qofsession.c:1073
 msgid "This book appears to be open already."
 msgstr "Den här boken verkar redan vara öppnad."
 
-#: ../qof/qofsession.c:1114
+#: qof/qofsession.c:1114
 #, c-format
 msgid ""
 "Unable to locate a suitable backend for '%s' - please check you have "
@@ -248,11 +248,11 @@ msgstr ""
 "Kunde inte hitta en lämplig bakände för \"%s\" - kontrollera att du har "
 "angivit en åtkomstmetod som file: eller sqlite:"
 
-#: ../qof/qofsession.c:1351 ../qof/qofsession.c:1388
+#: qof/qofsession.c:1351 qof/qofsession.c:1388
 msgid "Failed to load backend, no suitable handler."
 msgstr "Misslyckades med att läsa in bakände, ingen lämplig hanterare."
 
-#: ../qof/qofsql.c:758 ../qof/qofsql.c:785
+#: qof/qofsql.c:758 qof/qofsql.c:785
 #, c-format
 msgid ""
 "When converting SQLite strings into numbers, an overflow has been detected. "
